Bug 854029 - Allow use of non-gcthing values with RelocatableValue; r=billm