js/src/gc/Barrier-inl.h
@@ -223,7 +223,8 @@ RelocatableValue::RelocatableValue(const Value &v)
     : EncapsulatedValue(v)
 {
     JS_ASSERT(!IsPoisonedValue(v));
-    post();
+    if (v.isMarkable())
+        post();
 }
 
 inline
@@ -231,14 +232,15 @@ RelocatableValue::RelocatableValue(const RelocatableValue &v)
     : EncapsulatedValue(v.value)
 {
     JS_ASSERT(!IsPoisonedValue(v.value));
-    post();
+    if (v.value.isMarkable())
+        post();
 }
 
 inline
 RelocatableValue::~RelocatableValue()
 {
-    pre();
-    relocate();
+    if (value.isMarkable())
+        relocate(runtime(value));
 }
 
 inline RelocatableValue &
@@ -246,8 +248,16 @@ RelocatableValue::operator=(const Value &v)
 {
     pre();
     JS_ASSERT(!IsPoisonedValue(v));
-    value = v;
-    post();
+    if (v.isMarkable()) {
+        value = v;
+        post();
+    } else if (value.isMarkable()) {
+        JSRuntime *rt = runtime(value);
+        value = v;
+        relocate(rt);
+    } else {
+        value = v;
+    }
     return *this;
 }
 
@@ -256,8 +266,16 @@ RelocatableValue::operator=(const RelocatableValue &v)
 {
     pre();
     JS_ASSERT(!IsPoisonedValue(v.value));
-    value = v.value;
-    post();
+    if (v.value.isMarkable()) {
+        value = v.value;
+        post();
+    } else if (value.isMarkable()) {
+        JSRuntime *rt = runtime(value);
+        value = v.value;
+        relocate(rt);
+    } else {
+        value = v.value;
+    }
     return *this;
 }
 
@@ -265,26 +283,16 @@ inline void
 RelocatableValue::post()
 {
 #ifdef JSGC_GENERATIONAL
-    if (value.isMarkable())
-        runtime(value)->gcStoreBuffer.putRelocatableValue(&value);
+    JS_ASSERT(value.isMarkable());
+    runtime(value)->gcStoreBuffer.putRelocatableValue(&value);
 #endif
 }
 
 inline void
-RelocatableValue::post(JSRuntime *rt)
+RelocatableValue::relocate(JSRuntime *rt)
 {
 #ifdef JSGC_GENERATIONAL
-    if (value.isMarkable())
-        rt->gcStoreBuffer.putRelocatableValue(&value);
-#endif
-}
-
-inline void
-RelocatableValue::relocate()
-{
-#ifdef JSGC_GENERATIONAL
-    if (value.isMarkable())
-        runtime(value)->gcStoreBuffer.removeRelocatableValue(&value);
+    rt->gcStoreBuffer.removeRelocatableValue(&value);
 #endif
 }
 
